--- a/view/TelaGerenteCategorias.fxml
+++ b/view/TelaGerenteCategorias.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
@@ -84,38 +85,34 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <Text layoutX="24.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nome:">
+                              <Text layoutX="22.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nome:">
                                  <font>
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <TextField layoutX="118.0" layoutY="102.0" prefHeight="30.0" prefWidth="650.0">
+                              <TextField fx:id="nameField" layoutX="116.0" layoutY="51.0" prefHeight="30.0" prefWidth="650.0">
                                  <font>
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </TextField>
-                              <Button layoutX="583.0" layoutY="311.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="87.0" text="Salvar" />
-                              <Button layoutX="677.0" layoutY="311.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="87.0" text="Limpar" />
-                              <TextArea layoutX="24.0" layoutY="166.0" prefHeight="122.0" prefWidth="740.0">
+                              <Button layoutX="583.0" layoutY="324.0" mnemonicParsing="false" onAction="#saveCategoryAction" prefHeight="42.0" prefWidth="87.0" text="Salvar" />
+                              <Button layoutX="677.0" layoutY="324.0" mnemonicParsing="false" onAction="#clearField" prefHeight="42.0" prefWidth="87.0" text="Limpar" />
+                              <TextArea fx:id="notesField" layoutX="24.0" layoutY="179.0" prefHeight="122.0" prefWidth="740.0">
                                  <font>
                                     <Font size="20.0" />
                                  </font>
                               </TextArea>
-                              <Text layoutX="24.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Observações:">
+                              <Text layoutX="24.0" layoutY="170.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Observações:">
                                  <font>
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <Text layoutX="24.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Código:">
+                              <Text layoutX="22.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Unidade">
                                  <font>
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <TextField layoutX="118.0" layoutY="59.0" prefHeight="30.0" prefWidth="650.0">
-                                 <font>
-                                    <Font name="System Bold" size="14.0" />
-                                 </font>
-                              </TextField>
+                              <ComboBox fx:id="comboBoxCreation" layoutX="116.0" layoutY="107.0" prefHeight="25.0" prefWidth="652.0" />
                            </children>
                         </AnchorPane>
                   </content>
@@ -124,19 +121,20 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <Button fx:id="editButton" layoutX="585.0" layoutY="349.0" mnemonicParsing="false" onAction="#categorySelected" prefHeight="42.0" prefWidth="87.0" text="Editar" />
-                              <Button layoutX="679.0" layoutY="349.0" mnemonicParsing="false" onAction="#categoryEditDeleted" prefHeight="42.0" prefWidth="87.0" text="Excluir" />
+                              <Button fx:id="editButton" layoutX="584.0" layoutY="386.0" mnemonicParsing="false" onAction="#categorySelected" prefHeight="42.0" prefWidth="87.0" text="Editar" />
+                              <Button layoutX="678.0" layoutY="386.0" mnemonicParsing="false" onAction="#categoryEditDeleted" prefHeight="42.0" prefWidth="87.0" text="Excluir" />
                               <TextField fx:id="searchField" layoutX="200.0" layoutY="22.0" prefHeight="25.0" prefWidth="466.0" />
                               <Text layoutX="50.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Buscar Categoria:">
                                  <font>
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <Button fx:id="searchButton" layoutX="678.0" layoutY="14.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="87.0" text="Pesquisar" />
+                              <Button fx:id="searchButton" layoutX="678.0" layoutY="14.0" mnemonicParsing="false" onAction="#searchAction" prefHeight="42.0" prefWidth="87.0" text="Pesquisar" />
                               <TableView fx:id="categoriesTable" layoutX="53.0" layoutY="65.0" prefHeight="182.0" prefWidth="714.0">
                                 <columns>
-                                  <TableColumn fx:id="idColumn" prefWidth="236.0" text="Código" />
-                                  <TableColumn fx:id="nameColumn" prefWidth="477.0" text="Nome" />
+                                  <TableColumn fx:id="idColumn" prefWidth="117.0" text="Código" />
+                                  <TableColumn fx:id="nameColumn" prefWidth="378.0" text="Nome" />
+                                    <TableColumn fx:id="saleTypeColumn" prefWidth="218.0" text="Unidade de venda" />
                                 </columns>
                               </TableView>
                               <Text layoutX="22.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nome:">
@@ -149,17 +147,23 @@
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </TextField>
-                              <Button layoutX="492.0" layoutY="349.0" mnemonicParsing="false" onAction="#categoryEditSaved" prefHeight="42.0" prefWidth="87.0" text="Salvar" />
+                              <Button layoutX="491.0" layoutY="386.0" mnemonicParsing="false" onAction="#categoryEditSaved" prefHeight="42.0" prefWidth="87.0" text="Salvar" />
                               <Text layoutX="22.0" layoutY="321.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Código:">
                                  <font>
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <TextField fx:id="idEditField" layoutX="116.0" layoutY="301.0" prefHeight="30.0" prefWidth="650.0">
+                              <TextField fx:id="idEditField" disable="true" editable="false" layoutX="116.0" layoutY="301.0" prefHeight="30.0" prefWidth="650.0">
                                  <font>
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </TextField>
+                              <ComboBox fx:id="comboBox" layoutX="117.0" layoutY="347.0" prefHeight="25.0" prefWidth="651.0" />
+                              <Text layoutX="26.0" layoutY="365.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Unidade">
+                                 <font>
+                                    <Font name="Calibri" size="20.0" />
+                                 </font>
+                              </Text>
                            </children></AnchorPane>
                   </content>
                 </TitledPane>
