--- a/view/TelaGerenteUsuarios.fxml
+++ b/view/TelaGerenteUsuarios.fxml
@@ -2,13 +2,12 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.control.TreeTableColumn?>
-<?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -92,30 +91,24 @@
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <TextField layoutX="122.0" layoutY="76.0" prefHeight="30.0" prefWidth="650.0">
+                              <TextField fx:id="nameField" layoutX="122.0" layoutY="76.0" prefHeight="30.0" prefWidth="650.0">
                                  <font>
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </TextField>
-                              <Button layoutX="590.0" layoutY="343.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="87.0" text="Salvar" />
-                              <Button layoutX="684.0" layoutY="343.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="87.0" text="Limpar" />
-                              <Text layoutX="28.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Categoria:">
+                              <Button layoutX="590.0" layoutY="343.0" mnemonicParsing="false" onAction="#saveNewUser" prefHeight="42.0" prefWidth="87.0" text="Salvar" />
+                              <Button layoutX="684.0" layoutY="343.0" mnemonicParsing="false" onAction="#clearField" prefHeight="42.0" prefWidth="87.0" text="Limpar" />
+                              <Text layoutX="28.0" layoutY="231.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cargo">
                                  <font>
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <SplitMenuButton layoutX="122.0" layoutY="212.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="157.0" text="Selecione">
-                                <items>
-                                  <MenuItem mnemonicParsing="false" text="Administrador" />
-                                  <MenuItem mnemonicParsing="false" text="Caixa" />
-                                </items>
-                              </SplitMenuButton>
                               <Text layoutX="28.0" layoutY="142.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username:">
                                  <font>
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <TextField layoutX="122.0" layoutY="122.0" prefHeight="30.0" prefWidth="650.0">
+                              <TextField fx:id="usernameField" layoutX="122.0" layoutY="122.0" prefHeight="30.0" prefWidth="650.0">
                                  <font>
                                     <Font name="System Bold" size="14.0" />
                                  </font>
@@ -130,23 +123,14 @@
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <PasswordField layoutX="525.0" layoutY="169.0" prefHeight="25.0" prefWidth="246.0" />
-                              <PasswordField layoutX="97.0" layoutY="169.0" prefHeight="25.0" prefWidth="246.0" />
-                              <Text layoutX="294.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Id. Usuario:">
-                                 <font>
-                                    <Font name="Calibri" size="20.0" />
-                                 </font>
-                              </Text>
-                              <TextField layoutX="395.0" layoutY="210.0" prefHeight="30.0" prefWidth="376.0">
-                                 <font>
-                                    <Font name="System Bold" size="14.0" />
-                                 </font>
-                              </TextField>
+                              <PasswordField fx:id="passwordField2" layoutX="525.0" layoutY="169.0" prefHeight="25.0" prefWidth="246.0" />
+                              <PasswordField fx:id="passwordField" layoutX="97.0" layoutY="169.0" prefHeight="25.0" prefWidth="246.0" />
                               <ImageView fitHeight="76.0" fitWidth="92.0" layoutX="25.0" layoutY="362.0">
                                  <image>
                                     <Image url="@../../../../Desktop/Sistema%20Supermercado/Imagens%20usadas/icone-usuario.png" />
                                  </image>
                               </ImageView>
+                              <ComboBox fx:id="roleComboBox" layoutX="117.0" layoutY="214.0" prefWidth="150.0" />
                            </children>
                         </AnchorPane>
                   </content>
@@ -155,75 +139,44 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <Button layoutX="578.0" layoutY="496.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="87.0" text="Editar" />
-                              <Button layoutX="672.0" layoutY="496.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="87.0" text="Excluir" />
-                              <TextField layoutX="160.0" layoutY="22.0" prefHeight="25.0" prefWidth="506.0" />
+                              <Button layoutX="579.0" layoutY="393.0" mnemonicParsing="false" onAction="#selectedUserAction" prefHeight="42.0" prefWidth="87.0" text="Editar" />
+                              <Button layoutX="678.0" layoutY="393.0" mnemonicParsing="false" onAction="#deleteUser" prefHeight="42.0" prefWidth="87.0" text="Excluir" />
+                              <TextField fx:id="searchField" layoutX="160.0" layoutY="22.0" prefHeight="25.0" prefWidth="506.0" />
                               <Text layoutX="22.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Buscar Usuário:">
                                  <font>
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <Button layoutX="678.0" layoutY="14.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="87.0" text="Pesquisar" />
-                              <TreeTableView layoutX="20.0" layoutY="68.0" prefHeight="127.0" prefWidth="746.0">
-                                <columns>
-                                  <TreeTableColumn prefWidth="123.0" text="Id. Usuário" />
-                                  <TreeTableColumn prefWidth="622.0" text="Nome Usuário" />
-                                </columns>
-                              </TreeTableView>
-                              <Button layoutX="485.0" layoutY="496.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="87.0" text="Salvar" />
+                              <Button layoutX="678.0" layoutY="14.0" mnemonicParsing="false" onAction="#searchAction" prefHeight="42.0" prefWidth="87.0" text="Pesquisar" />
+                              <Button layoutX="477.0" layoutY="393.0" mnemonicParsing="false" onAction="#saveEdit" prefHeight="42.0" prefWidth="87.0" text="Salvar" />
                               <Text layoutX="22.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nome:">
                                  <font>
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <TextField layoutX="116.0" layoutY="216.0" prefHeight="30.0" prefWidth="651.0">
+                              <TextField fx:id="nameEditField" layoutX="116.0" layoutY="216.0" prefHeight="30.0" prefWidth="651.0">
                                  <font>
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </TextField>
-                              <Text layoutX="22.0" layoutY="371.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Categoria:">
-                                 <font>
-                                    <Font name="Calibri" size="20.0" />
-                                 </font>
-                              </Text>
-                              <SplitMenuButton layoutX="116.0" layoutY="352.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="157.0" text="Selecione">
-                                 <items>
-                                    <MenuItem mnemonicParsing="false" text="Administrador" />
-                                    <MenuItem mnemonicParsing="false" text="Caixa" />
-                                 </items>
-                              </SplitMenuButton>
                               <Text layoutX="22.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username:">
                                  <font>
                                     <Font name="Calibri" size="20.0" />
                                  </font>
                               </Text>
-                              <TextField layoutX="116.0" layoutY="262.0" prefHeight="30.0" prefWidth="650.0">
+                              <TextField fx:id="usernameEditField" layoutX="116.0" layoutY="262.0" prefHeight="30.0" prefWidth="650.0">
                                  <font>
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </TextField>
-                              <Text layoutX="22.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Senha:">
-                                 <font>
-                                    <Font name="Calibri" size="20.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutX="344.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirmação Senha:">
-                                 <font>
-                                    <Font name="Calibri" size="20.0" />
-                                 </font>
-                              </Text>
-                              <PasswordField layoutX="519.0" layoutY="309.0" prefHeight="25.0" prefWidth="246.0" />
-                              <PasswordField layoutX="91.0" layoutY="309.0" prefHeight="25.0" prefWidth="246.0" />
-                              <Text layoutX="288.0" layoutY="370.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Id. Usuario:">
-                                 <font>
-                                    <Font name="Calibri" size="20.0" />
-                                 </font>
-                              </Text>
-                              <TextField layoutX="389.0" layoutY="350.0" prefHeight="30.0" prefWidth="376.0">
-                                 <font>
-                                    <Font name="System Bold" size="14.0" />
-                                 </font>
-                              </TextField>
+                              <TableView fx:id="usersTable" layoutX="22.0" layoutY="56.0" prefHeight="153.0" prefWidth="744.0">
+                                <columns>
+                                  <TableColumn fx:id="idColumn" prefWidth="201.0" text="Código" />
+                                  <TableColumn fx:id="nameColumn" minWidth="0.0" prefWidth="244.0" text="Nome" />
+                                    <TableColumn fx:id="usernameColumn" prefWidth="168.0" text="Username" />
+                                    <TableColumn fx:id="typeColumn" prefWidth="130.0" text="Cargo" />
+                                </columns>
+                              </TableView>
                            </children></AnchorPane>
                   </content>
                 </TitledPane>
